--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             try {
                 if (authMode === 'signup') {
-                    const { data, error: authError } = await supabase.auth.signUp({
+                    const { data, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password
                     });
@@ -169,7 +169,7 @@
                     if (!data.user) throw new Error("Sign up failed.");
 
                     // Create profile
-                    const { error: profileError } = await supabase.from('profiles').insert({
+                    const { error: profileError } = await supabaseClient.from('profiles').insert({
                         id: data.user.id,
                         full_name: fullName,
                         student_id: studentId,
@@ -181,10 +181,10 @@
                     alert('Account created! Please verify your email if required, then sign in.');
                     setAuthMode('login');
                 } else {
-                    const { data, error: loginError } = await supabase.auth.signInWithPassword({ email, password });
+                    const { data, error: loginError } = await supabaseClient.auth.signInWithPassword({ email, password });
                     if (loginError) throw loginError;
 
-                    const { data: profile, error: profileError } = await supabase
+                    const { data: profile, error: profileError } = await supabaseClient
                         .from('profiles')
                         .select('role')
                         .eq('id', data.user.id)
